# mandala

./: Cargo.toml  README.md  yay.html
.github/workflows/: rust.yml
src/: ffmpeg.rs  lib.rs  main.rs  multi_threaded.rs
